--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.11",
     "@headlessui/vue": "^1.7.12",
-    "@heroicons/vue": "^2.0.15"
+    "@heroicons/vue": "^2.0.15",
+    "@meforma/vue-toaster": "^1.3.0",
+    "stylus": "^0.59.0",
+    "stylus-loader": "^3.0.2",
+    "toastification": "^0.0.4",
+    "vue-toaster": "^2.0.0",
+    "vue-toastification": "^2.0.0-rc.5"
   }
 }
