--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
   "dependencies": {
     "@headlessui/react": "^1.7.11",
     "@headlessui/vue": "^1.7.12",
-    "@heroicons/vue": "^2.0.15",
+    "@heroicons/vue": "^2.0.18",
     "@meforma/vue-toaster": "^1.3.0",
+    "@vue-hero-icons/outline": "^1.7.2",
     "stylus": "^0.59.0",
     "stylus-loader": "^3.0.2",
     "toastification": "^0.0.4",
